disable devenv chrome runner

--- a/production/dc-devenv.yaml
+++ b/production/dc-devenv.yaml
@@ -27,26 +27,26 @@ services:
         constraints:
           - node.hostname == co2
 
-  chrome:
-    image: zenika/alpine-chrome:with-puppeteer
-    entrypoint: [
-      "chromium-browser",
-      "--headless",
-      "--disable-gpu",
-      "--disable-software-rasterizer",
-      "--disable-dev-shm-usage",
-      "--no-sandbox",
-      "--remote-debugging-address=0.0.0.0",
-      "--remote-debugging-port=9222"
-    ]
-    networks:
-      - devenv
-    deploy:
-      mode: replicated
-      replicas: 1
-      placement:
-        constraints:
-          - node.hostname == co2
+  # chrome:
+  #   image: zenika/alpine-chrome:with-puppeteer
+  #   entrypoint: [
+  #     "chromium-browser",
+  #     "--headless",
+  #     "--disable-gpu",
+  #     "--disable-software-rasterizer",
+  #     "--disable-dev-shm-usage",
+  #     "--no-sandbox",
+  #     "--remote-debugging-address=0.0.0.0",
+  #     "--remote-debugging-port=9222"
+  #   ]
+  #   networks:
+  #     - devenv
+  #   deploy:
+  #     mode: replicated
+  #     replicas: 1
+  #     placement:
+  #       constraints:
+  #         - node.hostname == co2
 
 
 volumes:
