--- a/production/dc-fsb-staging.yaml
+++ b/production/dc-fsb-staging.yaml
@@ -1,13 +1,21 @@
 version: "3.3"
 
 services:
+  stage_rabbitmq:
+    image: rabbitmq:3.8
+    hostname: rabbit
+    deploy:
+      placement:
+        constraints:
+          - node.role == manager
+
   stage_api:
     image: ghcr.io/freestuffbot/fsb-api:staging
     environment:
       NODE_ENV: "production"
       FSB_API_PORT: "80"
-      FSB_API_REDIS_URL: "redis://infra_redis"
-      FSB_API_RABBIT_URL: "amqp://infra_rabbit"
+      FSB_API_REDIS_URL: ""
+      FSB_API_RABBIT_URL: "amqp://stage_rabbitmq"
       FSB_API_DASH_CORS_ORIGIN: "https://dashboard.freestuffbot.xyz"
       FSB_API_DASH_OAUTH_CALLBACK_URL: "https://dashboard.freestuffbot.xyz/oauth/callback"
       FSB_NETWORK_THUMBNAILER: "http://stage_thumbnailer"
@@ -16,7 +24,6 @@ services:
       FSB_NETWORK_UMI_ALLOWED_IP_RANGE: "10.0.0.0/16"
       FSB_API_PRIVATE_KEY_URI: "/run/secrets/FSB_API_PRIVATE_KEY"
     networks:
-      - redis
       - rabbits
       - metrics
       - proxy
@@ -78,7 +85,7 @@ services:
     environment:
       NODE_ENV: "production"
       FSB_DISCORD_INTERACTIONS_PORT: "80"
-      FSB_DISCORD_INTERACTIONS_RABBIT_URL: "amqp://infra_rabbit"
+      FSB_DISCORD_INTERACTIONS_RABBIT_URL: "amqp://stage_rabbitmq"
       FSB_NETWORK_UMI_ALLOWED_IP_RANGE: "10.0.0.0/16"
       FSB_NETWORK_DISCORD_GATEWAY: "http://stage_discord_gateway"
       FSB_DISCORD_INTERACTIONS_FREESTUFF_API_URL: "http://stage_api"
@@ -142,7 +149,7 @@ services:
     image: ghcr.io/freestuffbot/fsb-discord-publisher:staging
     environment:
       NODE_ENV: "production"
-      FSB_DISCORD_PUBLISHER_RABBIT_URL: "amqp://infra_rabbit"
+      FSB_DISCORD_PUBLISHER_RABBIT_URL: "amqp://stage_rabbitmq"
       FSB_DISCORD_PUBLISHER_FREESTUFF_API_URL: "http://stage_api"
       FSB_NETWORK_UMI_ALLOWED_IP_RANGE: "10.0.0.0/16"
     networks:
@@ -170,7 +177,7 @@ services:
     image: ghcr.io/freestuffbot/fsb-app-publisher:staging
     environment:
       NODE_ENV: "production"
-      FSB_APP_PUBLISHER_RABBIT_URL: "amqp://infra_rabbit"
+      FSB_APP_PUBLISHER_RABBIT_URL: "amqp://stage_rabbitmq"
       FSB_APP_PUBLISHER_FREESTUFF_API_URL: "http://stage_api"
       FSB_NETWORK_UMI_ALLOWED_IP_RANGE: "10.0.0.0/16"
     depends_on:
@@ -200,7 +207,7 @@ services:
   #     NODE_ENV: "production"
   #     FSB_NODE_ENV: "production"
   #     FSB_TELEGRAM_PUBLISHER_PORT: "80"
-  #     FSB_TELEGRAM_PUBLISHER_RABBIT_URL: "amqp://infra_rabbit"
+  #     FSB_TELEGRAM_PUBLISHER_RABBIT_URL: "amqp://stage_rabbitmq"
   #     FSB_TELEGRAM_PUBLISHER_FREESTUFF_API_URL: "http://stage_api"
   #     FSB_NETWORK_UMI_ALLOWED_IP_RANGE: "10.0.0.0/16"
   #   depends_on:
@@ -269,10 +276,6 @@ services:
 
 networks:
   # access to "external" services
-  redis:
-    external: true
-  rabbits:
-    external: true
   metrics:
     external: true
   proxy:
