--- a/production/dc-fsb-staging.yaml
+++ b/production/dc-fsb-staging.yaml
@@ -4,6 +4,9 @@ services:
   stage_rabbitmq:
     image: rabbitmq:3.8
     hostname: rabbit
+    networks:
+      - fsn_discord
+      - fsn_publisher
     deploy:
       placement:
         constraints:
