--- a/production/dc-fsb-staging.yaml
+++ b/production/dc-fsb-staging.yaml
@@ -10,7 +10,7 @@ services:
     deploy:
       placement:
         constraints:
-          - node.role == manager
+          - node.hostname == co1
 
   stage_api:
     image: ghcr.io/freestuffbot/fsb-api:staging
@@ -73,7 +73,7 @@ services:
       mode: replicated
       placement:
         constraints:
-          - node.hostname == coyote
+          - node.hostname == co1
       replicas: 1
       update_config:
         parallelism: 1
@@ -138,7 +138,7 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.hostname == coyote
+          - node.hostname == co1
       update_config:
         parallelism: 1
         delay: 30s
