--- a/production/dc-fsb.yaml
+++ b/production/dc-fsb.yaml
@@ -45,6 +45,9 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+      placement:
+        constraints:
+          - node.hostname == co1
       update_config:
         parallelism: 1
         delay: 30s
@@ -107,6 +110,9 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+      placement:
+        constraints:
+          - node.hostname == co1
       update_config:
         parallelism: 1
         delay: 30s
