--- a/production/dc-fsb.yaml
+++ b/production/dc-fsb.yaml
@@ -208,32 +208,32 @@ services:
         - xyz.freestuffbot.service.role=app-publisher
         - prometheus-job=fsb
 
-  telegram_publisher:
-    image: ghcr.io/freestuffbot/fsb-telegram-publisher:main
-    environment:
-      NODE_ENV: "production"
-      FSB_NODE_ENV: "production"
-      FSB_TELEGRAM_PUBLISHER_PORT: "80"
-      FSB_TELEGRAM_PUBLISHER_RABBIT_URL: "amqp://rabbitmq"
-      FSB_TELEGRAM_PUBLISHER_FREESTUFF_API_URL: "http://api"
-      FSB_NETWORK_UMI_ALLOWED_IP_RANGE: "10.0.0.0/16"
-    depends_on:
-      - api
-    networks:
-      - metrics
-      - fsn_publisher
-    secrets:
-      - FSB_TELEGRAM_PUBLISHER_FREESTUFF_API_KEY
-      - FSB_TELEGRAM_PUBLISHER_TELEGRAM_BOT_TOKEN
-    deploy:
-      mode: replicated
-      replicas: 1
-      update_config:
-        parallelism: 1
-        delay: 30s
-      labels:
-        - xyz.freestuffbot.service.role=telegram-publisher
-        - prometheus-job=fsb
+  # telegram_publisher:
+  #   image: ghcr.io/freestuffbot/fsb-telegram-publisher:main
+  #   environment:
+  #     NODE_ENV: "production"
+  #     FSB_NODE_ENV: "production"
+  #     FSB_TELEGRAM_PUBLISHER_PORT: "80"
+  #     FSB_TELEGRAM_PUBLISHER_RABBIT_URL: "amqp://rabbitmq"
+  #     FSB_TELEGRAM_PUBLISHER_FREESTUFF_API_URL: "http://api"
+  #     FSB_NETWORK_UMI_ALLOWED_IP_RANGE: "10.0.0.0/16"
+  #   depends_on:
+  #     - api
+  #   networks:
+  #     - metrics
+  #     - fsn_publisher
+  #   secrets:
+  #     - FSB_TELEGRAM_PUBLISHER_FREESTUFF_API_KEY
+  #     - FSB_TELEGRAM_PUBLISHER_TELEGRAM_BOT_TOKEN
+  #   deploy:
+  #     mode: replicated
+  #     replicas: 1
+  #     update_config:
+  #       parallelism: 1
+  #       delay: 30s
+  #     labels:
+  #       - xyz.freestuffbot.service.role=telegram-publisher
+  #       - prometheus-job=fsb
 
   thumbnailer:
     image: ghcr.io/freestuffbot/fsb-thumbnailer:main
