--- a/production/dc-fsb.yaml
+++ b/production/dc-fsb.yaml
@@ -134,6 +134,7 @@ services:
       NODE_ENV: "production"
       FSB_DISCORD_GATEWAY_PORT: "80"
       FSB_NETWORK_UMI_ALLOWED_IP_RANGE: "10.0.0.0/16"
+      FSB_NETWORK_DISCORD_GATEWAY: "http://discord_gateway"
     networks:
       - metrics
       - fsn_discord
