--- a/production/dc-fsb.yaml
+++ b/production/dc-fsb.yaml
@@ -134,10 +134,10 @@ services:
       NODE_ENV: "production"
       FSB_DISCORD_GATEWAY_PORT: "80"
       FSB_NETWORK_UMI_ALLOWED_IP_RANGE: "10.0.0.0/16"
-      FSB_NETWORK_DISCORD_GATEWAY: "http://discord_gateway"
     networks:
       - metrics
       - fsn_discord
+      - fsn_publisher
     secrets:
       - FSB_DISCORD_GATEWAY_API_TOKEN
       - FSB_DISCORD_GATEWAY_API_USER
@@ -163,6 +163,7 @@ services:
       FSB_DISCORD_PUBLISHER_RABBIT_URL: "amqp://rabbitmq"
       FSB_DISCORD_PUBLISHER_FREESTUFF_API_URL: "http://api"
       FSB_NETWORK_UMI_ALLOWED_IP_RANGE: "10.0.0.0/16"
+      FSB_NETWORK_DISCORD_GATEWAY: "http://discord_gateway"
     networks:
       - metrics
       - fsn_publisher
