--- a/production/dc-coder.yaml
+++ b/production/dc-coder.yaml
@@ -11,7 +11,7 @@ networks:
 
 services:
   coder:
-    image: ghcr.io/coder/coder:2.0.0
+    image: ghcr.io/coder/coder:latest
     networks:
       - db
       - proxy
