--- a/production/dc-devenv.yaml
+++ b/production/dc-devenv.yaml
@@ -26,6 +26,23 @@ services:
       placement:
         constraints:
           - node.hostname == co2
+          
+  postgres:
+    image: postgres:12-alpine
+    environment:
+      POSTGRES_DB: admin
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+    networks:
+      - devenv
+    volumes:
+      - devenv_postgres:/var/lib/postgresql/data
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints:
+          - node.role == co2
 
   # chrome:
   #   image: zenika/alpine-chrome:with-puppeteer
@@ -51,6 +68,7 @@ services:
 
 volumes:
   devenv_mongo:
+  devenv_postgres:
 
 networks:
   devenv:
