--- a/production/dc-devenv.yaml
+++ b/production/dc-devenv.yaml
@@ -10,6 +10,12 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: mongodb
     volumes:
       - devenv_mongo:/data/db
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints:
+          - node.hostname == co2
 
   rabbitmq:
     image: rabbitmq:latest
@@ -26,7 +32,7 @@ services:
       placement:
         constraints:
           - node.hostname == co2
-          
+
   postgres:
     image: postgres:12-alpine
     environment:
