--- a/production/dc-fsb.yaml
+++ b/production/dc-fsb.yaml
@@ -42,7 +42,7 @@ services:
       - FSB_API_PRIVATE_KEY
       - FSB_API_AUDITLOG_DEST_DISCORD
       - FSB_API_NOTIFICATIONS_DEST_DISCORD
-      - FSB_API_DISCORD_HELPER_AUTH_TOKEN
+      - FSB_API_HELPER_BOT_TOKEN
     deploy:
       mode: replicated
       replicas: 1
@@ -312,6 +312,32 @@ services:
         - xyz.freestuffbot.service.role=scraper
         - prometheus-job=fsb
 
+  butler:
+    image: ghcr.io/freestuffbot/fsb-butler:main
+    environment:
+      NODE_ENV: "production"
+      FSB_BUTLER_PORT: "80"
+      FSB_BUTLER_RABBIT_URL: "amqp://rabbitmq"
+      FSB_BUTLER_CLIENT_ID: "1086629360523554826"
+      FSB_BUTLER_FREESTUFF_API_URL: "http://api"
+      FSB_NETWORK_UMI_ALLOWED_IP_RANGE: "10.0.0.0/16"
+    networks:
+      - metrics
+      - fsn_tools
+    secrets:
+      - FSB_BUTLER_MONGO_URL
+      - FSB_BUTLER_TOKEN
+      - FSB_BUTLER_FREESTUFF_API_KEY
+    deploy:
+      mode: replicated
+      replicas: 1
+      update_config:
+        parallelism: 1
+        delay: 30s
+      labels:
+        - xyz.freestuffbot.service.role=butler
+        - prometheus-job=fsb
+
 networks:
   # access to "external" services
   metrics:
@@ -350,7 +376,7 @@ secrets:
     external: true
   FSB_API_NOTIFICATIONS_DEST_DISCORD:
     external: true
-  FSB_API_DISCORD_HELPER_AUTH_TOKEN:
+  FSB_API_HELPER_BOT_TOKEN:
     external: true
   # MANAGER
   FSB_MANAGER_MONGO_URL:
@@ -396,4 +422,11 @@ secrets:
     external: true
   # SCRAPER
   FSB_SCRAPER_MONGO_URL:
+    external: true
+  # BUTLER
+  FSB_BUTLER_MONGO_URL:
+    external: true
+  FSB_BUTLER_TOKEN:
+    external: true
+  FSB_BUTLER_FREESTUFF_API_KEY:
     external: true
