--- a/production/dc-fsb.yaml
+++ b/production/dc-fsb.yaml
@@ -7,6 +7,7 @@ services:
     networks:
       - fsn_discord
       - fsn_publisher
+      - fsn_tools
     deploy:
       placement:
         constraints:
