--- a/production/dc-weaviate.yaml
+++ b/production/dc-weaviate.yaml
@@ -23,7 +23,7 @@ services:
       PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
       DEFAULT_VECTORIZER_MODULE: 'text2vec-transformers'
       ENABLE_MODULES: 'text2vec-transformers,img2vec-neural'
-      CLUSTER_HOSTNAME: 'node1'
+      CLUSTER_HOSTNAME: 'co1'
     networks:
       - proxy
     deploy:
@@ -36,25 +36,36 @@ services:
         parallelism: 1
         delay: 30s
       labels:
-        - xyz.freestuffbot.service.role=api
-        - prometheus-job=fsb
+        - prometheus-job=weaviate
         - traefik.enable=true
         - traefik.docker.network=proxy
-        - traefik.http.services.fsb-api.loadbalancer.server.port=80
-        - traefik.http.routers.fsb-api.entrypoints=https
-        - traefik.http.routers.fsb-api.rule=Host(`api.freestuffbot.xyz`)
-        - traefik.http.routers.fsb-api.tls.certresolver=cloudflare
-        - traefik.http.routers.fsb-api.tls.domains[0].main=api.freestuffbot.xyz
+        - traefik.http.services.weaviate.loadbalancer.server.port=80
+        - traefik.http.routers.weaviate.entrypoints=https
+        - traefik.http.routers.weaviate.rule=Host(`debug-b2.tude.network`)
+        - traefik.http.routers.weaviate.tls.certresolver=cloudflare
+        - traefik.http.routers.weaviate.tls.domains[0].main=debug-b2.tude.network
 
   t2v-transformers:
     image: semitechnologies/transformers-inference:sentence-transformers-multi-qa-MiniLM-L6-cos-v1
     environment:
       ENABLE_CUDA: '0'
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints:
+          - node.hostname == co1
 
   i2v-neural:
     image: semitechnologies/img2vec-pytorch:resnet50
     environment:
       ENABLE_CUDA: '0'
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints:
+          - node.hostname == co1
 
 volumes:
   weaviate_data:
