--- a/production/dc-fsb.yaml
+++ b/production/dc-fsb.yaml
@@ -324,6 +324,7 @@ services:
       FSB_BUTLER_CLIENT_ID: "1086629360523554826"
       FSB_BUTLER_FREESTUFF_API_URL: "http://api"
       FSB_NETWORK_MANAGER: "http://manager"
+      FSB_NETWORK_DISCORD_GATEWAY: "http://discord_gateway"
       FSB_NETWORK_SCRAPER: "http://scraper"
       FSB_NETWORK_UMI_ALLOWED_IP_RANGE: "10.0.0.0/16"
     networks:
