--- a/production/dc-swarmpit.yaml
+++ b/production/dc-swarmpit.yaml
@@ -28,7 +28,7 @@ services:
           memory: 256M
       placement:
         constraints:
-          - node.role == manager
+          - node.role==manager
       labels:
         - traefik.enable=true
         - traefik.docker.network=proxy
@@ -45,6 +45,9 @@ services:
     networks:
       - net
     deploy:
+      placement:
+        constraints:
+          - node.role==manager
       resources:
         limits:
           cpus: '0.30'
@@ -60,6 +63,9 @@ services:
     networks:
       - net
     deploy:
+      placement:
+        constraints:
+          - node.role==manager
       resources:
         limits:
           cpus: '0.60'
