--- a/production/dc-deployman.yaml
+++ b/production/dc-deployman.yaml
@@ -22,7 +22,7 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.hostname == coyote
+          - node.labels.slice==B
       update_config:
         parallelism: 1
         delay: 10s
