--- a/production/dc-devenv.yaml
+++ b/production/dc-devenv.yaml
@@ -15,7 +15,7 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.hostname == mc
+          - node.labels.slice==B
 
   rabbitmq:
     image: rabbitmq:latest
@@ -31,7 +31,7 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.hostname == co2
+          - node.labels.slice==B
 
   postgres:
     image: postgres:12-alpine
@@ -48,7 +48,7 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.hostname == co2
+          - node.labels.slice==B
 
   # chrome:
   #   image: zenika/alpine-chrome:with-puppeteer
@@ -69,7 +69,7 @@ services:
   #     replicas: 1
   #     placement:
   #       constraints:
-  #         - node.hostname == co2
+  #         - node.labels.slice==B
 
 
 volumes:
