--- a/production/dc-fsb.yaml
+++ b/production/dc-fsb.yaml
@@ -11,7 +11,7 @@ services:
     deploy:
       placement:
         constraints:
-          - node.role == manager
+          - node.labels.slice==B
 
   api:
     image: ghcr.io/freestuffbot/fsb-api:main
@@ -47,9 +47,6 @@ services:
     deploy:
       mode: replicated
       replicas: 1
-      placement:
-        constraints:
-          - node.hostname == co1
       update_config:
         parallelism: 1
         delay: 30s
@@ -66,8 +63,6 @@ services:
 
   manager:
     image: ghcr.io/freestuffbot/fsb-manager:main
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
     environment:
       NODE_ENV: "production"
       FSB_MANAGER_PORT: "80"
@@ -81,9 +76,6 @@ services:
       - FSB_WEBHOOK_SERVICES
     deploy:
       mode: replicated
-      placement:
-        constraints:
-          - node.hostname == coyote
       replicas: 1
       update_config:
         parallelism: 1
@@ -118,7 +110,7 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.hostname == co1
+          - node.hostname==co1
       update_config:
         parallelism: 1
         delay: 30s
@@ -154,7 +146,7 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.hostname == coyote
+          - node.labels.hostname=co1
       update_config:
         parallelism: 1
         delay: 30s
@@ -182,7 +174,7 @@ services:
       mode: global
       placement:
         constraints:
-          - node.hostname != coyote
+          - node.hostname!=co1
       update_config:
         parallelism: 1
         delay: 30s
