--- a/production/dc-umami.yaml
+++ b/production/dc-umami.yaml
@@ -5,7 +5,7 @@ services:
     environment:
       DATABASE_URL: postgresql://umami:umami@db:5432/umami
       DATABASE_TYPE: postgresql
-      HASH_SALT: replace-me-with-a-random-string
+      HASH_SALT: AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
     depends_on:
       - db
     networks:
@@ -16,7 +16,7 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.role == manager
+          - node.labels.slice==B
       update_config:
         parallelism: 1
         delay: 10s
@@ -45,7 +45,7 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.role == manager
+          - node.labels.slice==B
       update_config:
         parallelism: 1
         delay: 10s
