--- a/production/dc-devenv.yaml
+++ b/production/dc-devenv.yaml
@@ -15,7 +15,8 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.labels.slice==B
+          - node.labels.autoscale==true
+          - node.labels.persistent==true
 
   rabbitmq:
     image: rabbitmq:latest
@@ -31,7 +32,7 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.labels.slice==B
+          - node.labels.autoscale==true
 
   postgres:
     image: postgres:12-alpine
@@ -48,7 +49,8 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.labels.slice==B
+          - node.labels.autoscale==true
+          - node.labels.persistent==true
 
   # chrome:
   #   image: zenika/alpine-chrome:with-puppeteer
@@ -69,7 +71,7 @@ services:
   #     replicas: 1
   #     placement:
   #       constraints:
-  #         - node.labels.slice==B
+  #         - node.labels.autoscale==true
 
 
 volumes:
