--- a/production/dc-tude.yaml
+++ b/production/dc-tude.yaml
@@ -27,6 +27,10 @@ services:
       - TUDEBOT_VAULT_PUBLIC_KEY
       - TUDEBOT_VAULT_PRIVATE_KEY
     deploy:
+      placement:
+        constraints:
+          - node.role==manager
+          - node.labels.autoscale==true
       update_config:
         parallelism: 1
         delay: 10s
