--- a/production/dc-deployman.yaml
+++ b/production/dc-deployman.yaml
@@ -22,7 +22,9 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.labels.slice==B
+          - node.role==manager
+          - node.labels.autoscale==true
+          - node.labels.persistent==true
       update_config:
         parallelism: 1
         delay: 10s
