--- a/production/dc-sussyalien.yaml
+++ b/production/dc-sussyalien.yaml
@@ -8,6 +8,9 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+      placement:
+        constraints:
+          - node.labels.autoscale==true
       update_config:
         parallelism: 1
         delay: 10s
@@ -27,6 +30,9 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+      placement:
+        constraints:
+          - node.labels.autoscale==true
       update_config:
         parallelism: 1
         delay: 10s
