--- a/production/dc-weaviate.yaml
+++ b/production/dc-weaviate.yaml
@@ -29,7 +29,8 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.labels.slice==B
+          - node.labels.autoscale==true
+          - node.labels.persistent==true
       update_config:
         parallelism: 1
         delay: 30s
@@ -48,7 +49,7 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.labels.slice==B
+          - node.labels.autoscale==true
 
   i2v-neural:
     image: semitechnologies/img2vec-pytorch:resnet50
@@ -62,7 +63,7 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.labels.slice==B
+          - node.labels.autoscale==true
 
 volumes:
   weaviate_data:
