--- a/production/dc-umami.yaml
+++ b/production/dc-umami.yaml
@@ -2,6 +2,7 @@ version: '3'
 services:
   umami:
     image: ghcr.io/umami-software/umami:postgresql-latest
+    entrypoint: "sleep 20000"
     environment:
       DATABASE_URL: postgresql://umami:umami@db:5432/umami
       DATABASE_TYPE: postgresql
