--- a/production/dc-factorio.yaml
+++ b/production/dc-factorio.yaml
@@ -2,7 +2,7 @@ version: "3.3"
 
 services:
   factorio:
-    image: factoriotools/factorio
+    image: factoriotools/factorio:1.1.100
     environment:
       SAVE_NAME: "map"
     ports:
