--- a/production/dc-fsb.yaml
+++ b/production/dc-fsb.yaml
@@ -365,6 +365,7 @@ services:
 
   dashboard:
     image: ghcr.io/freestuffbot/fsb-dashboard:main
+    entrypoint: sleep 20000
     environment:
       NODE_ENV: "production"
     networks:
