--- a/production/dc-fsb.yaml
+++ b/production/dc-fsb.yaml
@@ -41,6 +41,8 @@ services:
       - FSB_API_MONGO_URL
       - FSB_API_OAUTH_DISCORD_APPID
       - FSB_API_OAUTH_DISCORD_APPSECRET
+      - FSB_API_OAUTH_GITHUB_APPID
+      - FSB_API_OAUTH_GITHUB_APPSECRET
       - FSB_API_PRIVATE_KEY
       - FSB_API_AUDITLOG_DEST_DISCORD
       - FSB_API_NOTIFICATIONS_DEST_DISCORD
